Fixed issue with collapsed dropdown in header css

--- a/src/site/shared/containers/Header/Right/index.scss
+++ b/src/site/shared/containers/Header/Right/index.scss
@@ -4,32 +4,29 @@
 .header__right {
     padding: 5px 0;
 
-    @media (max-width: $collapse-breakpoint) {
-        flex: 0;
-        flex-direction: column;
-        align-items: center;
-        justify-content: flex-start;
-        margin-right: 9px;
-    }
-
-
-    & > button {
-        display: none;
-
-        padding: 0 10px;
-
-        // height: $header-height - 2*$header-padding;
-        // margin-top: $header-padding;
-
-        & > img {
-            width: 40px;
-        }
-
+    &__wrapper {
         @media (max-width: $collapse-breakpoint) {
-            display: inherit;
-            // margin-bottom: 2*$header-padding;
+            flex-direction: column;
+            align-items: center;
+            justify-content: flex-start;
+            align-self: flex-start;
+        }
+
+        & > button {
+            display: none;
+
+            @media (max-width: $collapse-breakpoint) {
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+
+                width: 100%;
+
+                padding: 0;
+            }
         }
     }
+
 
     &__btns {
         display: flex;
@@ -48,27 +45,22 @@
             border-radius: 0 0 5px 5px;
             background-color: $primary-color;
 
+            height: unset;
+
             flex-direction: column;
             justify-content: flex-start;
+
+            & > * {
+                margin-top: 10px;
+                margin-left: 0;
+            }
 
             & > div:first-child {
                 display: none;
             }
         }
 
-        // @media (max-width: $collapse-breakpoint) {
-        //     flex-direction: column;
-        //     justify-content: flex-start;
-        // }
-
-        & div {
-            cursor: pointer;
-        }
-        & button {
-            @media (max-width: $collapse-breakpoint) {
-                margin-left: 0;
-            }
-
+        & div, button {
             cursor: pointer;
         }
         #header-help-img {
@@ -181,7 +173,6 @@
             float: right;
 
             height: $header-button-height;
-            // margin-top: $header-padding;
             margin-left: 0;
             padding-right: 5px;
             padding-left: 5px;
@@ -206,9 +197,7 @@
         }
 
         @media (max-width: 500px) {
-            & {
-                display: none;
-            }
+            display: none;
         }
     }
 }
