--- a/src/site/shared/containers/Header/index.scss
+++ b/src/site/shared/containers/Header/index.scss
@@ -5,6 +5,8 @@
 header {
     z-index: 3;
 
+    position: relative;
+
     display: flex;
     flex-direction: row;
     justify-content: space-between;
